# bewbew

./: .gitignore  Cargo.toml  Makefile  README.md
bewbew/: Cargo.toml
bewbew/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
error/: Cargo.toml
error/src/: lib.rs
keypair_maker/: Cargo.toml
keypair_maker/src/: main.rs
sdk/: Cargo.toml
sdk/src/: apis.rs  auth.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server_sdk/: Cargo.toml
server_sdk/src/: apis.rs  lib.rs  state.rs
src/: main.rs
store/: Cargo.toml
store/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
