[package]
name = "bewbew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.25"
server_sdk = { path = "../server_sdk" }
