[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
error = { path = "../error" }
types = { path = "../types" }
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1.13.0", features = ["rt-multi-thread"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
lazy_static = "1.4.0"
